# RayTracing

./: .raytracer.cpp.swp  CMakeLists.txt  Camera.cpp  Camera.h  README.md  Raytracer.cpp  Raytracer.h  ambient.cpp  ambient.h  camera.cpp  camera.h  colour.h  diffuse.cpp  diffuse.h  finalexecutable  framebuffer.cpp  hit.h  lab1executable  lab2executable  lab3executable  light.cpp  light.h  lightModel.h  linedrawer.cpp  main_lab1.cpp  main_lab2.cpp  main_lab3.cpp  main_lab4.cpp  material.cpp  material.h  object.h  phong.cpp  phong.h  photon.h  photonTracer.h  photonmap.h  plane.cpp  plane.h  pointlight.cpp  pointlight.h  (+25 more)
Report/: Bibliography.bib  Note.md  ohe21.aux  ohe21.blg  ohe21.lof  ohe21.out  ohe21.tex  ohe21.toc  reportNotes.txt
src/: camera.cpp  colour.h  framebuffer.cpp  framebuffer.h  hit.h  light.h  linedrawer.cpp  material.cpp  material.h  object.h  photon.h  photonTracer.h  plane.cpp  plane.h  pointlight.cpp  pointlight.h  polymesh.cpp  polymesh.h  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spotlight.cpp  spotlight.h  teapot.cpp  teapot.h  tracer.h  tracing.cpp  triangle.cpp  triangle.h  vector.h  vertex.h
